--- a/interface/test.html
+++ b/interface/test.html
@@ -18,12 +18,10 @@ $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?
   },
 */
 
-$.getJSON("http://zeitgeist-borders.fabelier.org/search.json?jsoncallback=?",
-  {
-    q: "cat"
-  },
+$.getJSON("http://zeitgeist-borders.fabelier.org/search.json?q=cat&callback=?",
   function(data) {
-    $.each(data.items, function(i,item){
+	console.log(data);
+    $.each(data.items, function(i,result){
 	console.log(item);
       //$("<img/>").attr("src", item.media.m).appendTo("#images");
       //if ( i == 3 ) return false;
