--- a/interface/index.html
+++ b/interface/index.html
@@ -75,7 +75,7 @@
                   src="imgs/borders_logo.gif"
                   alt="Google Books"></a>
          </td>
-         <td style="padding-left: 0cm; padding-top: 0.035em; color: #009925; font-size: 28px;">What are the borders of a google auto suggestion ?</td>
+         <td style="padding-left: 0cm; padding-top: 0.035em; color: #009925; font-size: 28px;">What are the borders of Google Autocomplete ?</td>
        </tr>
       </table>
     </h1>
