--- a/interface/index.html
+++ b/interface/index.html
@@ -115,7 +115,7 @@
 	SOCIAL AREA
  -->
 
-	<center>Run your own experiment!  Raw data is available for download
+	<center>Run your own experiment ! Raw data is available for download
 	  <a href="#">here</a>.
 	</center>
 
@@ -126,8 +126,8 @@
 			filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=2); display: inline-block;">&copy;</span> 2011 Fabelier -
 	      <a href="http://www.fabelier.org" target="_blank">About Fabelier</a> -
 
-	      <a href="explication.html" target="_blank">About Google Autocomplete</a> -
-	      <a href="info.html">About Google Borders</a>
+	      <a href="http://support.google.com/websearch/bin/answer.py?hl=en&answer=106230" target="_blank">About Google Autocomplete</a> -
+	      <a href="explication.html">About Google Borders</a>
 	    </div>
 	</center>
 <script>
