--- a/interface/explication.html
+++ b/interface/explication.html
@@ -70,7 +70,7 @@
                   src="imgs/borders_logo.gif"
                   alt="Google Books"></a>
          </td>
-         <td style="padding-left: 0cm; padding-top: 0.035em; color: #009925; font-size: 28px;"> What are the borders of a google auto suggestion ?
+         <td style="padding-left: 0cm; padding-top: 0.035em; color: #009925; font-size: 28px;"> What are the borders of a Google Autocomplete ?
 		</td>
        </tr>
       </table>
@@ -86,11 +86,14 @@
 			<h1 style="margin-left:0px;padding:0px;height:35px;">	What is Google Borders ? </h1>
 		<table><tr>
 			<td>
-		As you type within the search box on Google, our autocomplete algorithm offers searches that might be similar to the one you're typing. Start to type [ new york ] -- even just [ new y ] -- and you may be able to pick searches for "New York City," "New York Times," and "New York University" (to name just a few).
+		While searching on google, when you start typing your request, the interface suggests you some words to complete your research : this is google autocomplete.
+		Based on what people usually ends up looking for, after typing the first few letters of their request, Google Autocomplete is good at guessing what we are seeking.
 		<br/><br/>
-		For certain queries, Google will show separate predictions for just the last few words. Below the word that you're typing in the search box, you'll see a smaller drop-down list containing predictions based only on the last words of your query. While each prediction shown in the drop-down list has been typed before by Google users, the combination of your primary text along with the completion may be unique.
+		Every country has its own suggestions, for example, while searching for “how to”, Google Armenia will suggest you “how to tie a tie”, while Google Portugal will propose you to search google for “how to love”, and Google Somalia “How to write a report”, and Google Laos “how to hack wireless password”, and Google Liechtenstein “how to be cool”.
 		<br/><br/>
-			
+		While everybody can easily question one of the googles, Google-Borders.com aims at providing a visualization of ALL country specific google search engines suggestions.
+		This way, you can have fun discovering unknown differences or similarities between a great number of countries.
+		<br/><br/>
 		
 		</td><td>
 			<img src="imgs/suggestion-illustration.gif"/>
