--- a/interface/explication.html
+++ b/interface/explication.html
@@ -65,7 +65,7 @@
     <h1>
       <table>
        <tr>
-         <td><a href="#google">
+         <td><a href="/">
              <img 
                   src="imgs/borders_logo.gif"
                   alt="Google Books"></a>
