--- a/interface/index.html
+++ b/interface/index.html
@@ -69,7 +69,7 @@
     <h1>
       <table>
        <tr>
-         <td><a src="/" href="#google">
+         <td><a href="/">
              <img 
                   src="imgs/borders_logo.gif"
                   alt="Google Books"></a>
