--- a/interface/index.html
+++ b/interface/index.html
@@ -101,7 +101,7 @@
     <h1>
       <table>
        <tr>
-         <td><a href="/">
+         <td><a href="./index.html">
              <img 
                   src="imgs/borders_logo.gif"
                   alt="Google Books"></a>
