FIX: interface bug

--- a/interface/explication.html
+++ b/interface/explication.html
@@ -65,7 +65,7 @@
     <h1>
       <table>
        <tr>
-         <td><a href="#google">
+         <td><a href="./">
              <img 
                   src="imgs/borders_logo.gif"
                   alt="Google Books"></a>
@@ -81,23 +81,29 @@
 	  </div>
 	  
 	</blockquote>
-	<div id="resultContainer"  style="margin-left:40px;width:880px;height:300px;border:solid 1px #c0c0c0;padding:10px;">
+	<div id="resultContainer"  style="margin-left:40px;width:880px;height:400px;border:solid 1px #c0c0c0;padding:10px;">
 	
 			<h1 style="margin-left:0px;padding:0px;height:35px;">	What is Google Borders ? </h1>
 		<table><tr>
 			<td>
-		While searching on google, when you start typing your request, the interface suggests you some words to complete your research : this is google autocomplete.
+		While searching on google, when you start typing your request, the interface suggests you some words to complete your research : <a href="http://support.google.com/websearch/bin/answer.py?hl=en&answer=106230" target="_blank"><b>this is google autocomplete.</b></a>
 		Based on what people usually ends up looking for, after typing the first few letters of their request, Google Autocomplete is good at guessing what we are seeking.
 		<br/><br/>
-		Every country has its own suggestions, for example, while searching for “how to”, Google Armenia will suggest you “how to tie a tie”, while Google Portugal will propose you to search google for “how to love”, and Google Somalia “How to write a report”, and Google Laos “how to hack wireless password”, and Google Liechtenstein “how to be cool”.
-		<br/><br/>
+		Every country has its own suggestions, for instance,<br/> while searching for <b><a href="index.html#how%20to" target="_blank">“how to”</a></b> :
+		<ul><li> Google Armenia will suggest you “how to tie a tie”,</li><li>Google Portugal will propose you to search google for “how to love”,</li><li>Google Somalia “How to write a report”,</li> <li> Google Laos “how to hack wireless password”,</li><li>Google Liechtenstein “how to be cool”.</li></ul>
+		<br/>
 		While everybody can easily question one of the googles, Google-Borders.com aims at providing a visualization of ALL country specific google search engines suggestions.
 		This way, you can have fun discovering unknown differences or similarities between a great number of countries.
 		<br/><br/>
 		
 		</td><td>
 			<img src="imgs/suggestion-illustration.gif"/>
-<a href="http://support.google.com/websearch/bin/answer.py?hl=en&answer=106230">Google official autocomplete explanation</a>
+This open service, with available raw data and source code, was brought to you by :
+
+<a href="https://twitter.com/#!/mazieres" target="_blank">@mazieres</a>
+<a href="https://twitter.com/#!/cybunk"   target="_blank"> @cybunk</a>
+<a href="https://twitter.com/#!/sizeof"   target="_blank">@sizeof</a>
+ from <a href="http://fabelier.org/" 	  target="_blank"> Fabelier Hackerspace</a>, a lab to make things, for the fun of it.
 			</td></tr>
 
 			</table>
