--- a/interface/index.html
+++ b/interface/index.html
@@ -112,7 +112,7 @@
     </h1>
 	<blockquote>
 
-	  <div style="height:30px;">
+	  <div style="height:30px;width:900px;">
 		<div class="teaser">
 		Map what google <b>suggests</b> for :
 	    <input type="text"
