FIX: interface integration

--- a/interface/exemple.html
+++ b/interface/exemple.html
@@ -4,7 +4,7 @@
     <title>Google Borders Viewer</title>
     <link rel="stylesheet" type="text/css" href="http://www.google.com/css/go-x.css">
     <link rel="stylesheet" type="text/css" href="http://www.google.com/css/modules/buttons/g-button.css">
-  	<script type="text/javascript" src="lib/jquery-1.7.1.min.js"></script>
+  	<script type="text/javascript" src="static/lib/jquery-1.7.1.min.js"></script>
 
 	<style type="text/css">
 			.qr{
@@ -67,7 +67,7 @@
        <tr>
          <td><a href="./index.html">
              <img 
-                  src="imgs/borders_logo.gif"
+                  src="static/imgs/borders_logo.gif"
                   alt="Google Books"></a>
          </td>
          <td style="padding-left: 0cm; padding-top: 0.035em; color: #009925; font-size: 28px;"> What are the borders of a google auto suggestion ?
